케빈 TV ::: Stream API
1. 함수형 프래그래밍에서 함수의 조건에 대해 알아보았다.
2. 무한 컬렉션에 대해 알아보았다.
3. 스트림의 연산횟수에 대해 알아보았다.
4. Optimize imports 설정에 대해 알아보았다.
5. 이전에 람다로 작성하였던 Product 계산들을 Stream의 지원 함수로 구현해보았다.
6. stream parallel에 대해 알아보았고 주의점에 대해서도 알아보았다.
7. stream parallel이 iterative보다 정말 느린지 확인해 보았다.
8. 실제 사용해 볼 법한 예제들로 iterative, stream, stream parallel의 속도를 테스트 해보았다.